--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
 </head>
 <body>
     <main>
+        <headder class="main-header">
+            <p>Alvaro Leon</p>
+            <ul>
+                <li><a href="">Portafolio</a></li>
+                <li><a href="">GitHub</a></li>
+                <li><a href="">Linkeid</a></li>
+                <li><a href="">Twitter</a></li>
+            </ul>
+        </headder>
        <section class=" main-container">
            <h1>Programador y desarrollador Full Stack</h1>
            <p>Hola, Soy Alvaro Leon, en esta pagina podras conocer mas sobre mi y mi trabajo. <br>
