Se agrego educacion

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
            <h1>Programador y desarrollador Full Stack</h1>
            <p>Hola, Soy Alvaro Leon, en esta pagina podras conocer mas sobre mi y mi trabajo. <br>
             Soy ingeniero de sistema, con enfasis en el lenguaje de progrmacion Swift, pero tambien soy desarrollador web con manejo de HTML, CSS y JavaScript.
+            Soy graduado del Politecnico Grancolombiano
            </p>
        </section>
     </main>
