--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 </head>
 <body>
     <main>
-        <headder class="main-header">
-            <p>Alvaro Leon</p>
+        <header class="main-header">
+            <h2>Alvaro Leon</h2>
             <ul>
                 <li><a href="">Portafolio</a></li>
                 <li><a href="">GitHub</a></li>
                 <li><a href="">Linkeid</a></li>
                 <li><a href="">Twitter</a></li>
             </ul>
-        </headder>
+        </header>
        <section class=" main-container">
            <h1>Programador y desarrollador Full Stack</h1>
            <p>Hola, Soy Alvaro Leon, en esta pagina podras conocer mas sobre mi y mi trabajo. <br>
