Nuevo parrafo y correccion del anterio

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
        <section class=" main-container">
            <h1>Programador y desarrollador Full Stack</h1>
            <p>Hola, Soy Alvaro Leon, en esta pagina podras conocer mas sobre mi y mi trabajo. <br>
-            Soy ingeniero de sistema, con enfasis en el lenguaje de progrmacion Swift, pero tambien soy desarrollador web con manejo de HTML, CSS y JavaScript.
+            Soy ingeniero de sistema, con enfasis en el lenguaje de progrmacion Swift, pero tambien soy desarrollador web con manejo de HTML, CSS y JavaScript.<br>
             Soy graduado del Politecnico Grancolombiano
+           </p>
+           <p>
+               BUsco cada dia aprender sobre nuevas tecnologias y tener un gran reto en mis proyectos.
            </p>
        </section>
     </main>
