--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <header class="main-header">
-            <h2>Alvaro Leon</h2>
+            <h2>Alvaro Leon Camacho</h2>
             <ul>
                 <li><a href="">Portafolio</a></li>
                 <li><a href="">GitHub</a></li>
@@ -29,6 +29,9 @@
            </p>
            <p>
                BUsco cada dia aprender sobre nuevas tecnologias y tener un gran reto en mis proyectos.
+           </p>
+           <p>
+               Soy de medellin
            </p>
        </section>
     </main>
