Esto es el ensayo desde otro computador

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
            <p>
                Soy de medellin
            </p>
+           <p>
+               Este fragmento lo cree desde mi macbook y lo quiero ver en mi Khali <br> 
+               Ojala y todo salga biens
+           </p>
+
        </section>
     </main>
     
