--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <header class="main-header">
-            <h2>Alvaro Leon Camacho</h2>
+            <h2>Alvaro Leon</h2>
             <ul>
                 <li><a href="">Portafolio</a></li>
                 <li><a href="">GitHub</a></li>
