--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <main>
         <header class="main-header">
             <h2>Alvaro Leon</h2>
+            <span class="menuIcon"></span>
             <ul>
                 <li><a href="">Portafolio</a></li>
                 <li><a href="">GitHub</a></li>
