se termino de adptar la navbar para movile, falta el menu

--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             Soy graduado del Politecnico Grancolombiano
            </p>
            <p>
-               BUsco cada dia aprender sobre nuevas tecnologias y tener un gran reto en mis proyectos.
+               Busco cada dia aprender sobre nuevas tecnologias y tener un gran reto en mis proyectos.
            </p>
            <p>
                Soy de medellin
            </p>
            <p>
                Este fragmento lo cree desde mi macbook y lo quiero ver en mi Khali <br> 
-               Ojala y todo salga biens
+               Ojala y todo salga bien
            </p>
 
        </section>
