Footer semi terminado

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
 
        </section>
     </main>
+    <footer>
+        <ul>
+            <li>Linkeid</li>
+            <li>Facebook</li>
+            <li>Instagram</li>
+            <li>Email</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
