Correcion del footer, pensar movile first

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     </main>
     <footer>
         <ul>
-            <li>Linkeid</li>
-            <li>Facebook</li>
-            <li>Instagram</li>
+            <li>Linkedin</li>
             <li>Email</li>
+            <li>Instagram</li>
+            <li>Facebook</li>
         </ul>
     </footer>
     
